[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-bridge"
version = "2026.6.5"
description = "Responses API to Chat Completions bridge for Codex CLI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "OpenAI Codex" }]
keywords = [
  "codex",
  "responses-api",
  "chat-completions",
  "proxy",
  "bridge",
  "python",
  "llm",
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "uvicorn>=0.30,<1.0",
]

[project.urls]
Homepage = "https://github.com/IP127000/codex-bridge-python"
Repository = "https://github.com/IP127000/codex-bridge-python"
Issues = "https://github.com/IP127000/codex-bridge-python/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
codex-bridge = "codex_bridge.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
