[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-bridge-python"
version = "0.1.3"
description = "Responses API to Chat Completions bridge for Codex CLI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "codex-bridge-python contributors" }]
keywords = [
  "codex",
  "responses-api",
  "chat-completions",
  "proxy",
  "bridge",
  "python",
  "llm",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Natural Language :: Chinese (Simplified)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: Proxy Servers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "uvicorn>=0.30,<1.0",
]

[project.urls]
Homepage = "https://github.com/IP127000/codex-bridge-python"
Repository = "https://github.com/IP127000/codex-bridge-python"
Issues = "https://github.com/IP127000/codex-bridge-python/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2,<2.0",
  "pytest>=8.0,<9.0",
  "twine>=6.0,<7.0",
]

[project.scripts]
codex-bridge-python = "codex_bridge.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
